# Millennium

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierrc  .releaserc  .terms-of-service  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  FUNDING.yml  LICENSE  LICENSE.md  Millennium.Installer.V2.sln  README.md  SECURITY.md  User32.sln  build_ninja.bat  config.hpp  dllmain.cpp  docker-build-linux.sh  dockerfile  flake.nix  installer.sln  logger.hpp  millennium-silent.sln  millennium.sln  package-lock.json  shell.nix  vcpkg-configuration.json  vcpkg.json  version  version.rc  webkit.hpp
cli/: CMakeLists.txt  main.cc  params.h
cli/core/: config.h  plugins.h  themes.h
cli/include/: chown.h  sock_serv.h
cli/logger/: log.h
cli/posix/: patch.h
cli/src/: main.c  main.cc  sock_serv.c  sock_serv.cc
cli/util/: ansi.h  log.h  reload_steam.h  restart_steam.h  sockets.h  steam.h
hhx64/: CMakeLists.txt
hhx64/include/: lb_request.h
hhx64/src/: main.cc  match.cc  patch.cc  smem.cc  smrq_handler.cc  urlp.cc
physfs/: CMakeLists.txt  README.md  main.cc
src/: .clang-format  .clangd  CMakeLists.txt  TODO.md  compile_commands.json  dllmain.cpp  main.cc  main.cpp  metrics.cpp  metrics.hpp  millennium-linux.vcxproj  millennium-linux.vcxproj.filters  millennium.cc  millennium.vcxproj  millennium.vcxproj.filters  stdafx.cpp  stdafx.h
src/__builtins__/: accent_color.cc  api.js  bootstrap.js  config.cc  core.cc  css_analyzer.cc  default_settings.cc  executor.cc  executor.h  incbin.h  ipc_handler.cc  millennium.cc  plugin_installer.cc  scan.cc  theme_config.cc  theme_installer.cc  updater.cc  webkit_handler.cc
src/_win32/: cmd.h  thread.h
src/api/: executor.cc  executor.h
src/backend/: browser_extension_mgr.cc  css_parser.cc  default_cfg.cc  entry_point.cc  ipc_handler.cc  libjs_interop.cc  liblj_api.cc  liblj_interop.cc  liblj_logger.cc  libpy_gil.cc  libpy_interop.cc  libpy_logger.cc  library_updater.cc  plugin_mgr.cc  scan.cc  sys_accent_col.cc  theme_cfg.cc  theme_mgr.cc  webkit.cc
src/bindings/: README.md  css_parser.cc  default_cfg.cc  entry_point.cc  library_updater.cc  plugin_config.cc  plugin_mgr.cc  scan.cc  sys_accent_col.cc  theme_cfg.cc  theme_mgr.cc  webkit.cc
src/boot/: README.md
src/bootstrap/: README.md
src/core/: _c_lua_api.cc  _c_lua_http.cc  _c_lua_interop.cc  _c_lua_logger.cc  _c_lua_utils.cc  _c_py_api.cc  _c_py_gil.cc  _c_py_interop.cc  _c_py_logger.cc  _js_interop.cc  _millennium_api.cc  auth.cc  backend_init.cc  backend_mgr.cc  cdp_api.cc  cdpapi.cc  co_spawn.cc  co_stub.cc  core_ipc.cc  events.cc  ffi_binder.cc  ftp_serv.cc  http_hook.cc  http_hooks.cc  init.cc  ipc.cc  ipc_pipe.cc  lifecycle.cc  loader.cc  loader.cpp  loader.h  loader.hpp  main.cc  main.cpp  millennium_api.cc  millennium_updater.cc  plugin_loader.cc  plugin_webkit_store.cc  plugin_webkit_world_mgr.cc  secure_socket.cc  (+2 more)
src/crash_handler/: CMakeLists.txt  main.cc
src/dev/: devtools.cc
src/emu/: CMakeLists.txt
src/engine/: auth.cc  backend_init.cc  backend_mgr.cc  browser_extension_mgr.cc  cdp_api.cc  cdp_connector.cc  child_process.cc  cmdline_api.cc  cmdline_parse.cc  core_ipc.cc  ffi_binder.cc  http_hooks.cc  lifecycle.cc  millennium_updater.cc  plugin_loader.cc  plugin_manager.cc  plugin_webkit_store.cc  plugin_webkit_world_mgr.cc  star_parser.cc  target_url.cc  thread_pool.cc
src/frontend/: index.tsx  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
src/ftp/: serv.cc  serv.h
src/generic/: base.h  stream_parser.cc  stream_parser.h
src/git/: git.cc  git.h  pyman.h  vcs.h
src/head/: _mlib_cfg.cc  _mlib_millennium_updater.cc  _mlib_sys_accent_col.cc  cfg.cc  css_parser.cc  default_cfg.cc  entry_point.cc  ipc_handler.cc  library_updater.cc  millennium_updater.cc  plugin_mgr.cc  scan.cc  sys_accent_col.cc  theme_cfg.cc  theme_mgr.cc  webkit.cc
src/hhx64/: .clangd  CMakeLists.txt  compile_commands.json  fread.cc  log_viewer.cc  loopback.cc  main.cc  match.cc  patch.cc  smem.cc  smrq_handler.cc  urlp.cc
src/hooks/: cefparam.cc  steam_hooks.cc
src/include/: config.cpp  config.hpp  json.hpp  logger.hpp
src/instrumentation/: CMakeLists.txt  fread.cc  log_viewer.cc  loopback.cc  main.cc  match.cc  patch.cc  smem.cc  steam_hooks.cc  urlp.cc
src/locales/: brazilian.json  bulgarian.json  danish.json  dutch.json  english.json  french.json  german.json  hungarian.json  indonesian.json  italian.json  japanese.json  koreana.json  latam.json  polish.json  russian.json  schinese.json  spanish.json  swedish.json  tchinese.json  turkish.json  ukrainian.json  vietnamese.json
src/locals/: io.cc  locals.h  plugin-schema.json  settings.cc
src/lua_host/: CMakeLists.txt  crash_handler.cc  crash_handler.h  lua_config_rpc.cc  lua_config_rpc.h  lua_datetime.cc  lua_hook_api.cc  lua_http.cc  lua_interop.cc  lua_logger_rpc.cc  lua_millennium_rpc.cc  main.cc  rpc.cc  rpc.h
src/mep/: console_capture.cc  console_capture.h  crash_event_bus.cc  crash_event_bus.h  exception_capture.cc  ffi_recorder.cc  ffi_recorder.h  log_normalize.cc  mep_hooks.cc  mep_hooks.h  mep_message.cc  mep_router.cc  mep_router.h  mep_server.cc  mep_server.h  patch_stream_recorder.cc  sdk_ready_bus.cc
src/package_manager/: config.py  dev_tools.py  logger.py  main.py  package_manager.py  pip_setup.py  plugins.py
src/pipes/: terminal_pipe.h
src/pipx/: config.py  main.py  package_manager.py  pip_setup.py  plugins.py
src/plat/: init_macos.cc  init_posix.cc  init_posix_deprecated.cc  init_win32.cc  macos_menu.mm  win32.cc
src/platform/: init_posix_deprecated.cc  linux.cc  linux_legacy.cc  macos.cc  macos_accent_color.mm  macos_menu.mm  macos_window_style.mm  posix.cc  windows.cc
src/posix/: helpers.h
src/procmon/: cmd.h  thread.h
src/runtime/: libjs_interop.cc  liblj_api.cc  liblj_fs.cc  (+12 more)
starlight/: Cargo.toml  README.md  build.rs  build.ts
tests/: CMakeLists.txt  FindPython_test.cc
unix-hooks/: CMakeLists.txt  logger.h  main.cc  proxy-trampoline.h
win32/: CMakeLists.txt  http.h  main.cc  steam.h  unzip.h
(+1270 files in other folders)
